OpenVDB Version History
=======================

Version 5.1.0 - In development

    Houdini:
    - Added output grid naming options to the Points Convert SOP.


Version 5.0.0 - November 6, 2017

      Some changes in this release (see "ABI changes" below) alter
      the grid ABI so that it is incompatible with earlier versions
      of the OpenVDB library, such as the ones built into Houdini
      up to and including Houdini 16.  To preserve ABI compatibility,
      when compiling OpenVDB or any dependent code define the macro
      OPENVDB_ABI_VERSION_NUMBER=N, where, for example, N is 3 for
      Houdini 15, 15.5 and 16 and 4 for the upcoming release.

    New features:
    - Added a getLibraryAbiVersionString() function, which returns a
      string such as "5.0.0abi3".
    - Added a WeakPtr type alias for ABI compatibility.
    - Metadata fields of unregistered types are no longer discarded after
      being read from a .vdb file, and although their values are not printable,
      they can be written back to disk.
    - Added a DESTDIR_LIB_DIR Makefile variable for Linux multiarch support.
      [Contributed by Mathieu Malaterre]
    - Added tools to create potential flow fields, as described in the
      2017 SIGGRAPH OpenVDB course.
      [Contributed by Double Negative]
    - Added tools to create mask grids from point data grids and to compute
      point counts.
      [Contributed by Dan Bailey]
    - Added tools to scatter OpenVDB points randomly throughout a volume.
      [Contributed by Nick Avramoussis]

    Improvements:
    - Significantly improved the performance of point data grid group filters.
      [Contributed by Double Negative]

    Bug fixes:
    - Fixed bugs in tools::ClosestSurfacePoint's distance calculations
      that caused searches to produce incorrect results.
    - Fixed a locking issue that affected multithreaded access to
      PointDataLeafNodes when delayed loading was in effect.
      [Contributed by Dan Bailey]
