@@ -337,14 +337,18 @@ template<typename Type>
 inline bool
 isNegative(const Type& x) { return x < zeroVal<Type>(); }
 
-/// Return @c false, since @c bool values are never less than zero.
+// Return false, since bool values are never less than zero.
 template<> inline bool isNegative<bool>(const bool&) { return false; }
 
 
 /// Return @c true if @a x is finite.
+inline bool
+isFinite(const float x) { return std::isfinite(x); }
+
+/// Return @c true if @a x is finite.
 template<typename Type, typename std::enable_if<std::is_arithmetic<Type>::value, int>::type = 0>
 inline bool
-isFinite(const Type& x) { return std::isfinite((double)x); }
+isFinite(const Type& x) { return std::isfinite(static_cast<double>(x)); }
 
 
 /// @brief Return @c true if @a a is equal to @a b to within
