@@ -583,8 +583,7 @@ SOP_OpenVDB_Advect::evalAdvectionParms(OP_Context& context, AdvectionParms& parm
     }
 
     evalString(str, "velGroup", 0, now);
-    const GA_PrimitiveGroup *velGroup =
-        matchGroup(*velGeo, str.toStdString());
+    const GA_PrimitiveGroup *velGroup = matchGroup(*velGeo, str.toStdString());
 
     hvdb::VdbPrimCIterator it(velGeo, velGroup);
     if (it) {
