@@ -542,8 +542,7 @@ SOP_OpenVDB_Noise::cookMySop(OP_Context &context)
         if (mSecondInputConnected) {
             evalString(groupStr, "maskGroup", 0, time);
 
-            const GA_PrimitiveGroup* maskGroup =
-                matchGroup(*refGdp, groupStr.toStdString());
+            const GA_PrimitiveGroup* maskGroup = matchGroup(*refGdp, groupStr.toStdString());
 
             hvdb::VdbPrimCIterator gridIter(refGdp, maskGroup);
 
