@@ -299,7 +299,7 @@ SOP_OpenVDB_Segment::cookMySop(OP_Context& context)
         const GU_Detail* inputGeoPt = inputGeo(0);
         const GA_PrimitiveGroup *group = nullptr;
 
-        hvdb::Interrupter boss("VDB Segment");
+        hvdb::Interrupter boss("Segmenting VDBs");
 
         {
             UT_String str;
