@@ -714,8 +714,7 @@ SOP_OpenVDB_To_Polygons::cookMySop(OP_Context& context)
         // Get the group of grids to surface.
         UT_String groupStr;
         evalString(groupStr, "group", 0, time);
-        const GA_PrimitiveGroup* group =
-            matchGroup(*vdbGeo, groupStr.toStdString());
+        const GA_PrimitiveGroup* group = matchGroup(*vdbGeo, groupStr.toStdString());
         hvdb::VdbPrimCIterator vdbIt(vdbGeo, group);
 
         if (!vdbIt) {
@@ -777,8 +776,7 @@ SOP_OpenVDB_To_Polygons::cookMySop(OP_Context& context)
                 UT_String maskStr;
                 evalString(maskStr, "adaptivityfieldname", 0, time);
 
-                const GA_PrimitiveGroup *maskGroup =
-                    matchGroup(*maskGeo, maskStr.toStdString());
+                const GA_PrimitiveGroup *maskGroup = matchGroup(*maskGeo, maskStr.toStdString());
 
                 if (!maskGroup && maskStr.length() > 0) {
                     addWarning(SOP_MESSAGE, "Adaptivity field not found.");
@@ -933,8 +931,7 @@ SOP_OpenVDB_To_Polygons::referenceMeshing(
 # if 0
     // Check for reference VDB
     {
-        const GA_PrimitiveGroup *refGroup =
-            matchGroup(*refGeo, "");
+        const GA_PrimitiveGroup *refGroup = matchGroup(*refGeo, "");
         hvdb::VdbPrimCIterator refIt(refGeo, refGroup);
         if (refIt) {
             const openvdb::GridClass refClass = refIt->getGrid().getGridClass();
